Temporary fixing for overflow display

--- a/src/components/units/Display/_Display.scss
+++ b/src/components/units/Display/_Display.scss
@@ -4,6 +4,7 @@
   border-radius: 10px;
   padding: 0.8rem 0.74rem;
   margin-bottom: 0.75rem;
+  overflow-x: hidden;
 
   h1 {
     text-align: right;
